# textual-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  KNOWN_GAPS.md  LICENSE  README.md  ROADMAP.md  demo.css
docs/examples/: Cargo.toml  README.md
docs/examples/app/: Cargo.toml
docs/examples/app/examples/event01/: main.rs
docs/examples/app/examples/question01/: main.rs
docs/examples/app/examples/question02/: main.rs
docs/examples/app/examples/question03/: main.rs
docs/examples/app/examples/question_title01/: main.rs
docs/examples/app/examples/question_title02/: main.rs
docs/examples/app/examples/simple01/: main.rs
docs/examples/app/examples/simple02/: main.rs
docs/examples/app/examples/suspend/: main.rs
docs/examples/app/examples/suspend_process/: main.rs
docs/examples/app/examples/widgets01/: main.rs
docs/examples/app/examples/widgets02/: main.rs
docs/examples/app/examples/widgets03/: main.rs
docs/examples/app/examples/widgets04/: main.rs
docs/examples/coldapp_form/: Cargo.toml
docs/examples/coldapp_form/src/: main.rs
docs/examples/coldapp_kanban/: Cargo.toml
docs/examples/coldapp_kanban/src/: add_task.tcss  main.rs
docs/examples/coldapp_pomodoro/: Cargo.toml
docs/examples/coldapp_pomodoro/src/: main.rs
docs/examples/coldapp_stream/: Cargo.toml
docs/examples/coldapp_stream/src/: main.rs
docs/examples/events/: Cargo.toml
docs/examples/events/examples/custom01/: main.rs
docs/examples/events/examples/dictionary/: main.rs
docs/examples/events/examples/on_decorator01/: main.rs
docs/examples/events/examples/on_decorator02/: main.rs
docs/examples/events/examples/prevent/: main.rs
docs/examples/getting_started/: Cargo.toml
docs/examples/getting_started/examples/console/: main.rs
docs/examples/guide/actions/: Cargo.toml
docs/examples/guide/animator/: Cargo.toml
docs/examples/guide/command_palette/: Cargo.toml
docs/examples/guide/compound/: Cargo.toml
docs/examples/guide/content/: Cargo.toml
docs/examples/guide/core/: Cargo.toml
docs/examples/guide/css/: Cargo.toml
docs/examples/guide/input/: Cargo.toml
docs/examples/guide/layout/: Cargo.toml
docs/examples/guide/reactivity/: Cargo.toml
docs/examples/guide/reactivity/src/: main.rs
docs/examples/guide/screens/: Cargo.toml
docs/examples/guide/styles/: Cargo.toml
docs/examples/guide/testing/: Cargo.toml
docs/examples/guide/widgets/: Cargo.toml
docs/examples/guide/workers/: Cargo.toml
docs/examples/how-to/: Cargo.toml
docs/examples/how-to/examples/center01/: main.rs
docs/examples/how-to/examples/center02/: main.rs
docs/examples/how-to/examples/center03/: main.rs
docs/examples/how-to/examples/center04/: main.rs
docs/examples/how-to/examples/center05/: main.rs
docs/examples/how-to/examples/center06/: main.rs
docs/examples/how-to/examples/center07/: main.rs
docs/examples/how-to/examples/center08/: main.rs
docs/examples/how-to/examples/center09/: main.rs
docs/examples/how-to/examples/center10/: main.rs
docs/examples/how-to/examples/containers01/: main.rs
docs/examples/how-to/examples/containers02/: main.rs
docs/examples/how-to/examples/containers03/: main.rs
docs/examples/how-to/examples/containers04/: main.rs
docs/examples/how-to/examples/containers05/: main.rs
docs/examples/how-to/examples/containers06/: main.rs
docs/examples/how-to/examples/containers07/: main.rs
docs/examples/how-to/examples/containers08/: main.rs
docs/examples/how-to/examples/containers09/: main.rs
docs/examples/how-to/examples/inline01/: main.rs
docs/examples/how-to/examples/inline02/: main.rs
docs/examples/how-to/examples/layout/: main.rs
docs/examples/how-to/examples/layout01/: main.rs
docs/examples/how-to/examples/layout02/: main.rs
docs/examples/how-to/examples/layout03/: main.rs
docs/examples/how-to/examples/layout04/: main.rs
docs/examples/how-to/examples/layout05/: main.rs
docs/examples/how-to/examples/layout06/: main.rs
docs/examples/how-to/examples/render_compose/: main.rs
docs/examples/styles/: Cargo.toml
docs/examples/styles/examples/align/: main.rs
docs/examples/styles/examples/align_all/: main.rs
docs/examples/styles/examples/background/: main.rs
docs/examples/styles/examples/background_tint/: main.rs
docs/examples/styles/examples/background_transparency/: main.rs
docs/examples/styles/examples/border/: main.rs
docs/examples/styles/examples/border_all/: main.rs
docs/examples/styles/examples/border_sub_title_align_all/: main.rs
docs/examples/styles/examples/border_subtitle_align/: main.rs
docs/examples/styles/examples/border_title_align/: main.rs
docs/examples/styles/examples/border_title_colors/: main.rs
docs/examples/styles/examples/box_sizing/: main.rs
docs/examples/styles/examples/color/: main.rs
docs/examples/styles/examples/color_auto/: main.rs
docs/examples/styles/examples/column_span/: main.rs
docs/examples/styles/examples/content_align/: main.rs
docs/examples/styles/examples/content_align_all/: main.rs
docs/examples/styles/examples/display/: main.rs
docs/examples/styles/examples/dock_all/: main.rs
docs/examples/styles/examples/grid/: main.rs
docs/examples/styles/examples/grid_columns/: main.rs
docs/examples/styles/examples/grid_gutter/: main.rs
docs/examples/styles/examples/grid_rows/: main.rs
docs/examples/styles/examples/grid_size_both/: main.rs
docs/examples/styles/examples/grid_size_columns/: main.rs
docs/examples/styles/examples/hatch/: main.rs
docs/examples/styles/examples/height/: main.rs
docs/examples/styles/examples/height_comparison/: main.rs
docs/examples/styles/examples/keyline/: main.rs
docs/examples/styles/examples/keyline_horizontal/: main.rs
docs/examples/styles/examples/layout/: main.rs
docs/examples/styles/examples/link_background/: main.rs
docs/examples/themes/: Cargo.toml
docs/examples/tutorial/: Cargo.toml
docs/examples/widgets/: Cargo.toml  README.md
docs/examples/widgets/src/: main.rs
textual-macros/: Cargo.toml
textual-macros/src/: lib.rs  on_handler.rs  reactive.rs  widget.rs
(+910 files in other folders)
