[package]
name = "textual"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A reactive TUI framework inspired by the Python Textual library"
keywords = ["terminal", "tui", "textual", "ui", "widgets"]
categories = ["command-line-interface"]

[dependencies]
rich-rs = "1.0.2"
crossterm = "0.28"
richtui-crossterm = { path = "../richtui/crates/richtui-crossterm" }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time", "sync"] }
thiserror = "2.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
slotmap = "1.1"
regex = "1.12"
open = "5.3"
textual-macros = { path = "textual-macros" }

[dev-dependencies]
insta = { version = "1.41", features = ["glob"] }

[patch.crates-io]
rich-rs = { path = "../rich-rs" }

[features]
default = []

[lints.rust]
unsafe_code = "forbid"
