[package]
name = "textual"
version = "1.0.0-dev"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "A reactive TUI framework inspired by the Python Textual library"
repository = "https://github.com/mrsaraiva/textual-rs"
documentation = "https://docs.rs/textual"
readme = "README.md"
keywords = ["terminal", "tui", "textual", "ui", "widgets"]
categories = ["command-line-interface"]
exclude = [
    ".idea/",
    ".claude/",
    "docs/devel/",
    "tools/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rich-rs = "1.1.0"
crossterm = "0.28"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time", "sync"] }
thiserror = "2.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
slotmap = "1.1"
regex = "1.12"
open = "5.3"
textual-macros = { version = "1.0.0-dev", path = "textual-macros" }
pulldown-cmark = "0.13"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
insta = { version = "1.41", features = ["glob"] }
portable-pty = "0.9"
serde_json = "1"
vt100 = "0.15"

[features]
default = []
# Optional terminal-driver tracing hooks (used by src/driver/platform/*).
trace = ["dep:tracing"]

[lints.rust]
unsafe_code = "forbid"
