[package]
name = "textual-macros"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Proc macros for the textual TUI framework (#[reactive], #[on()], #[derive(Message)], etc.)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
