[package]
name = "textual-macros"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Proc macros for the textual TUI framework (#[reactive], #[on()], #[derive(Message)], etc.)"
repository = "https://github.com/mrsaraiva/textual-rs"
documentation = "https://docs.rs/textual-macros"
keywords = ["terminal", "tui", "textual", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
