[workspace]
members = [
  "app",
  "coldapp_kanban",
  "coldapp_pomodoro",
  "events",
  "getting_started",
  "guide/actions",
  "guide/animator",
  "guide/command_palette",
  "guide/compound",
  "guide/content",
  "guide/core",
  "guide/css",
  "guide/input",
  "guide/layout",
  "guide/reactivity",
  "guide/screens",
  "guide/styles",
  "guide/testing",
  "guide/widgets",
  "guide/workers",
  "how-to",
  "styles",
  "themes",
  "tutorial",
  "widgets",
]
resolver = "2"
