[package]
name = "textual-docs-styles"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
textual = { path = "../../.." }
rich-rs = "1.1.1"
crossterm = "0.28"
tree-sitter-java = "0.23"

# Disambiguate the `layout` example binary name (collides with how-to/examples/layout).
[[example]]
name = "styles_layout"
path = "examples/layout/main.rs"

